--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=
-REACT_APP_AUTH0_CLIENT_ID=
-REACT_APP_API_ENDPOINT=
+REACT_APP_AUTH0_DOMAIN=dev-rjypz4lz06pirclr.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=IkVmxgpYUWc1ghanoCrBithSC2td2LhF
+REACT_APP_API_ENDPOINT=https://oioh8skpuf.execute-api.us-east-1.amazonaws.com/dev
